changed default model-id back to anthropic/claude-sonnet-4.5, increased max-workers to 15, adjusted timestamp format, and fixed output directory paths
- Reverted default --model-id from 'glm-4.6' to 'anthropic/claude-sonnet-4.5'
- Increased default --max-workers from 10 to 15
- Changed timestamp format from "%Y%m%d_%H%M%S" to "%Y%m%d_%H%M"
- Fixed evaluate-file path resolution from 'output' to 'responses' directory
- Updated output file naming to use evaluation file stem instead of model_id_safe

--- a/models.yaml
+++ b/models.yaml
@@ -34,7 +34,7 @@ models:
       prompt_price: 14.00
       completion_price: 84.00
 
-  - name: Minimax-M2
+  - name: minimax-m2
     temperature: 1.0
     base_url: https://api.minimaxi.chat/v1
     api_key: "${MINIMAX_API_KEY}"
