--- a/models.yaml
+++ b/models.yaml
@@ -36,12 +36,12 @@ models:
 
   - name: minimax-m2
     temperature: 1.0
-    base_url: https://api.minimaxi.chat/v1
+    base_url: https://api.minimaxi.com/v1
     api_key: "${MINIMAX_API_KEY}"
   
   - name: minimax-m2.1
     temperature: 1.0
-    base_url: https://api.minimaxi.chat/v1
+    base_url: https://api.minimaxi.com/v1
     api_key: "${MINIMAX_API_KEY}"
   
   - name: deepseek-chat
