--- a/evaluators.yaml
+++ b/evaluators.yaml
@@ -1,26 +1,34 @@
-# LLM Model Configuration
-# This file defines the available language models and their configurations
-
-# Available models
-default:
-  base_url: <base_url>
-  api_key: "${DEFAULT_LLM_API_KEY}"
-  temperature: 0.0
-
 models:
   - name: deepseek-chat
-    temperature: 0.0
+    temperature: 1.0
+    base_url: https://api.deepseek.com
+    api_key: "${DEEPSEEK_API_KEY}"
+  
+  - name: deepseek-reasoner
+    temperature: 1.0
     base_url: https://api.deepseek.com
     api_key: "${DEEPSEEK_API_KEY}"
 
   - name: glm-4.7
-    temperature: 0.0
+    temperature: 1.0
     base_url: https://open.bigmodel.cn/api/paas/v4
     api_key: "${GLM_API_KEY}" 
     extra_body: {"thinking": {"type": "disabled"}}
 
   - name: doubao-seed-1-8-251228
-    temperature: 0.0
+    temperature: 1.0
     base_url: https://ark.cn-beijing.volces.com/api/v3
     api_key: "${ARK_API_KEY}"
-    extra_body: {"reasoning_effort": "minimal"}
+    extra_body: {"reasoning_effort": "medium"}
+  
+  - name: google/gemini-3-flash-preview
+    temperature: 1.0
+    base_url: https://openrouter.ai/api/v1
+    api_key: "${OPENROUTER_API_KEY}"
+    extra_body: {reasoning: {effort: "high"}}
+  
+  - name: kimi-k2.5
+    temperature: 0.6
+    base_url: https://api.moonshot.cn/v1
+    api_key: "${MOONSHOT_API_KEY}"
+    extra_body: {"thinking": {"type": "disabled"}}
