--- a/models.yaml
+++ b/models.yaml
@@ -35,11 +35,13 @@ models:
     temperature: 1.0
     base_url: https://api.minimaxi.com/v1
     api_key: "${MINIMAX_API_KEY}"
+    extra_body: {"reasoning_split": True}
   
   - name: minimax-m2.1
     temperature: 1.0
     base_url: https://api.minimaxi.com/v1
     api_key: "${MINIMAX_API_KEY}"
+    extra_body: {"reasoning_split": True}
   
   - name: deepseek-chat
     temperature: 0.0
@@ -69,8 +71,8 @@ models:
     base_url: https://api.moonshot.cn/v1
     api_key: "${MOONSHOT_API_KEY}"
   
-  - name: kimi-k2-0905-preview
-    temperature: 0.0
+  - name: kimi-k2.5
+    temperature: 1.0
     base_url: https://api.moonshot.cn/v1
     api_key: "${MOONSHOT_API_KEY}"
 
